[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fartforge"
version = "1.0.0"
description = "The world's first AI-agent fart analytics platform. May the smelliest agent win."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "FartForge Labs", email = "stink@fartforge.xyz" }]
keywords = ["fart", "ai", "agents", "llm", "solana", "memecoin", "analytics", "audio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "httpx>=0.27.0",
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.28.0"]
langchain = ["langchain>=0.2.0", "langchain-core>=0.2.0"]
autogen = ["pyautogen>=0.2.0"]
all = ["crewai>=0.28.0", "langchain>=0.2.0", "langchain-core>=0.2.0", "pyautogen>=0.2.0"]

[project.scripts]
fartforge = "fartforge.cli:main"

[project.urls]
Homepage = "https://fartforge.xyz"
Repository = "https://github.com/fartforge-labs/fartforge"
Documentation = "https://docs.fartforge.xyz"

[tool.setuptools.packages.find]
where = ["."]
include = ["fartforge*"]

[tool.setuptools.package-data]
fartforge = ["audio/*.wav", "audio/*.mp3", "py.typed"]
