[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "fartforge"
version         = "2.0.0"
description     = "Universal agent evaluation, observability, and replay platform"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
authors         = [{ name = "StackBleed", github = "stackbleed-ctrl" }]
keywords        = ["agent", "evaluation", "observability", "ai", "llm", "solana"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core — zero required deps
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]
solana = [
    "solders>=0.20",
    "solana>=0.34",
]
metrics = [
    "prometheus_client>=0.20",
]
crypto = [
    "cryptography>=42",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fartforge[api,crypto]",
]
all = [
    "fartforge[api,solana,metrics,crypto]",
]

[project.urls]
Homepage      = "https://github.com/stackbleed-ctrl/FARTForge"
Documentation = "https://github.com/stackbleed-ctrl/FARTForge#readme"
"Bug Tracker" = "https://github.com/stackbleed-ctrl/FARTForge/issues"

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["fartforge*"]
